--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -33,9 +33,8 @@
   }
 
   &.inverted {
-    background-color: black;
-    color: white;
     background-color: white;
+    color: black;
 
     &:hover {
       background-color: black;
