--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -35,6 +35,7 @@
   &.inverted {
     background-color: white;
     color: black;
+    border: 1px solid black;
 
     &:hover {
       background-color: black;
